fix on mobile

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -416,4 +416,9 @@ label.required:before {
     .mobile-margin-top {
         margin-top: 8.3em;
     }
+
+    .nav-item {
+        padding-top: .5em;
+        padding-bottom: .5em;
+    }
 }
